<resources>
    <string name="app_name">VizoraLejelento</string>
    <string name="login">Bejelentkezes</string>
    <string name="usr">Felhasznalonev</string>
    <string name="pass">Jelszo</string>
    <string name="regist">Regisztracio</string>
    <string name="cancel">Megse</string>
    <string name="repass">Jelszo ujra</string>
    <string name="email">Email cim</string>
    <string name="vizora_szama">Vizora szama</string>
    <string name="oraallas">12345m3</string>
    <string name="nev">Ugyfelnev</string>
    <string name="befizetett">Befizetve: Nem</string>
    <string name="diktal">Lejelentes</string>
    <string name="lejelentes">Vizora allasa</string>
    <string name="lediktalt_orallasok">Lediktalt orallasok</string>
    <string name="lefotozas">Lefotozas</string>
    <string name="befizetes">Befizet</string>
    <string name="torol">Torles</string>
    <string name="modositas">Modositas</string>
    <string name="default_notification_channel_id">vizora_ertesito</string>

    <string-array name="vizora_az">
        <item>120</item>
        <item>121</item>
        <item>122</item>
    </string-array>

    <string-array name="id">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="vizora_allas">
        <item>15248</item>
        <item>00154</item>
        <item>15200</item>
    </string-array>

    <string-array name="vizora_ugyfel">
        <item>Bela</item>
        <item>Pista</item>
        <item>Janos</item>
    </string-array>

    <string-array name="mail">
        <item>bela@gmail.com</item>
        <item>pista@gmail.com</item>
        <item>janos@gmail.com</item>
    </string-array>

    <string-array name="befizet">
        <item>false</item>
        <item>false</item>
        <item>false</item>
    </string-array>
</resources>